--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -5,6 +5,18 @@
     <title>test</title>
   </head>
   <body>
-    
+    <input id="fileupload" type="file" name="files" multiple/>
+    <script src="js/libs/jquery-1.12.3.min.js"></script>
+    <script src="js/libs/jquery.ui.widget.js"></script>
+    <script src="js/libs/jquery.iframe-transport.js"></script>
+    <script src="js/libs/jquery.fileupload.js"></script>
+    <!--<script src="//blueimp.github.io/JavaScript-Load-Image/js/load-image.all.min.js"></script>-->
+    <!--<script src="js/libs/jquery.fileupload-process.js"></script>-->
+    <!--<script src="js/libs/jquery.fileupload-image.js"></script>-->
+    <!--<script src="js/libs/jquery.fileupload-audio.js"></script>-->
+    <!--<script src="js/libs/jquery.fileupload-video.js"></script>-->
+    <!--<script src="js/libs/jquery.fileupload-validate.js"></script>-->
+    <!--<script src="js/libs/jquery.fileupload-ui.js"></script>-->
+    <script src="js/app.fileupload.js"></script>
   </body>
 </html>
